# sensevoice-onnx

./: CMakeLists.txt  README.md  alsa.cc  alsa.h  build.sh  main.cc  resample.cc  sense_voice.cpp  stream.cc  vad.cpp  vad.h
